--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <a href="https://talmetal.me/index2.html" class="button-link">dead link</a>
-  <iframe src="https://economybooks.info/test.html"></iframe>
+  <a href="https://talmetal.me/metal.html" class="button-link">dead link</a>
+  <iframe src="https://talmetal.me/index2.html"></iframe>
 </body>
 </html>
