--- a/tal.html
+++ b/tal.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>dead link</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .button-link {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: #fff;
+      color: black;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 5px;
+      z-index: 100;
+    }
+    .button-link:hover {
+      background-color: greenyellow;
+    }
+  </style>
+</head>
+<body>
+  <a href="https://talmetal.me/metal.html" class="button-link">dead link</a>
+  <iframe src="https://economybooks.info/mosaic.html"></iframe>
+</body>
+</html>
+
