--- a/tal.html
+++ b/tal.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <a href="https://talmetal.me/metal.html" class="button-link">dead link</a>
+  <a href="https://talmetal.me/talme.html" class="button-link">dead link</a>
   <iframe src="https://economybooks.info/mosaic.html"></iframe>
 </body>
 </html>
