--- a/talme.html
+++ b/talme.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body.inverted {
-            filter: invert(1);
+            filter: brightness(300%);
         }
     </style>
 </head>
