--- a/talme.html
+++ b/talme.html
@@ -6,8 +6,11 @@
     <title>dead link</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body.inverted {
-            filter: brightness(300%);
+        body {
+            filter: brightness(100%);
+        }
+                body.inverted {
+            filter: brightness(250%);
         }
     </style>
 </head>
