--- a/tal.html
+++ b/tal.html
@@ -25,8 +25,8 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background-color: #fff;
-      color: black;
+      background-color: black;
+      color: white;
       padding: 10px 15px;
       text-decoration: none;
       border-radius: 5px;
