--- a/tal.html
+++ b/tal.html
@@ -25,16 +25,17 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background-color: black;
-      color: white;
+      background-color: white;
+      color: black;
       padding: 10px 15px;
       text-decoration: none;
       border-radius: 5px;
       z-index: 100;
+      border: 1px solid black;
     }
     .button-link:hover {
       background-color: greenyellow;
-      color: black;
+      border: none;
     }
   </style>
 </head>
