--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       text-decoration: none;
       border-radius: 5px;
       z-index: 100;
+      border: 0.5px solid black;
     }
     .button-link:hover {
       background-color: greenyellow;
