--- a/talme.html
+++ b/talme.html
@@ -9,9 +9,25 @@
         body {
             transition: filter 2s ease-in-out;
         }
+        .button-link {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background-color: #fff;
+      color: black;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 0px;
+      z-index: 100;
+      border: 0.5px solid black;
+    }
+    .button-link:hover {
+      background-color: greenyellow;
+    }
     </style>
 </head>
 <body>
+      <a href="https://talmetal.me/tal" class="button-link">dead link</a>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEftNhPefZb7l7Di6IFZUWDrFV9PtBXbRxXakux0hlrBw0cjVeA0yq4Jku13_WGaijv9BfWq41aqMv/pubhtml"></iframe>
 
     <script>
