--- a/talme.html
+++ b/talme.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-      <a href="https://talmetal.me/tal" class="button-link">dead link</a>
+      <a href="https://talmetal.me" class="button-link">dead link</a>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEftNhPefZb7l7Di6IFZUWDrFV9PtBXbRxXakux0hlrBw0cjVeA0yq4Jku13_WGaijv9BfWq41aqMv/pubhtml"></iframe>
 
     <script>
