--- a/tal.html
+++ b/tal.html
@@ -23,11 +23,11 @@
     }
     .button-link {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 50%;
+      left: 50%;
       background-color: white;
       color: black;
-      padding: 10px 15px;
+      padding: 10px 55px;
       text-decoration: none;
       border-radius: 5px;
       z-index: 100;
