--- a/tal.html
+++ b/tal.html
@@ -22,16 +22,17 @@
       border: none;
     }
     .button-link {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      background-color: white;
-      color: black;
-      padding: 10px 55px;
-      text-decoration: none;
-      border-radius: 5px;
-      z-index: 100;
-      border: 0.5px solid black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    color: black;
+    padding: 10px 55px;
+    text-decoration: none;
+    border-radius: 5px;
+    z-index: 100;
+    border: 0.5px solid black;
     }
     .button-link:hover {
       background-color: greenyellow;
