--- a/tal.html
+++ b/tal.html
@@ -22,17 +22,16 @@
       border: none;
     }
     .button-link {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    color: black;
-    padding: 25px 55px;
-    text-decoration: none;
-    border-radius: 5px;
-    z-index: 100;
-    border: 0.5px solid black;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: #fff;
+      color: black;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 5px;
+      z-index: 100;
+      border: 0.5px solid black;
     }
     .button-link:hover {
       background-color: greenyellow;
