--- a/talme.html
+++ b/talme.html
@@ -11,8 +11,8 @@
         }
         .button-link {
       position: absolute;
-      bottom: 100px;
-      left: 10px;
+      top: 10px;
+      right: 10px;
       background-color: #fff;
       color: black;
       padding: 10px 15px;
