--- a/talme.html
+++ b/talme.html
@@ -6,12 +6,31 @@
     <title>dead link</title>
     <link rel="stylesheet" href="style.css">
     <style>
+
+                html {
+    overflow: hidden;
+}
+        
         body {
-            transition: filter 2s ease-in-out;
             margin: 0;
             padding: 0;
             font-family: times;
         }
+
+iframe {
+    width: 100dvw;
+    height: 110dvh;
+    border: 0;
+    /* filter: grayscale(100%); */
+}
+
+/* @media(max-width: 600px) {
+    iframe {
+        /* transform: scale(1.3); */
+        margin-top: -100px;
+        height: 150dvh;
+    }
+} */
         
         .button-link {
             position: absolute;
