--- a/talme.html
+++ b/talme.html
@@ -21,16 +21,15 @@ iframe {
     width: 100dvw;
     height: 110dvh;
     border: 0;
-    /* filter: grayscale(100%); */
 }
 
-/* @media(max-width: 600px) {
+@media(max-width: 600px) {
     iframe {
         /* transform: scale(1.3); */
         margin-top: -100px;
         height: 150dvh;
     }
-} */
+}
         
         .button-link {
             position: absolute;
