--- a/talme.html
+++ b/talme.html
@@ -20,13 +20,13 @@
             border: 0;
             /* filter: grayscale(100%); */
         }
-        @media(max-width: 600px) {
+      /*   @media(max-width: 600px) {
             iframe {
                 /* transform: scale(1.3); */
                 margin-top: -100px;
                 height: 150dvh;
             }
-        }
+        } */
 
         /* Existing styles */
         body {
