--- a/talme.html
+++ b/talme.html
@@ -13,6 +13,7 @@
             margin: 0;
             padding: 0;
             /* background-color: blueviolet; */
+            transition: filter 2s ease-in-out;
         }
         iframe {
             width: 100dvw;
