--- a/talme.html
+++ b/talme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2dead link</title>
+    <title>3dead link</title>
     <style>
         /* Integrated CSS from style.css */
         html, body {
@@ -19,8 +19,8 @@
         }
 
         iframe {
-            width: 100%;
-            height: 100%;
+            width: 100dvw;
+            height: 110dvh;
             border: 0;
         }
 
@@ -67,7 +67,7 @@
         .value {
             color: red;
             font-weight: bold;
-            font-size: 24px;
+            font-size: 36px;
         }
 
         /* Blinking animation without transition */
