--- a/talmetal.html
+++ b/talmetal.html
@@ -102,7 +102,7 @@
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEftNhPefZb7l7Di6IFZUWDrFV9PtBXbRxXakux0hlrBw0cjVeA0yq4Jku13_WGaijv9BfWq41aqMv/pubhtml"></iframe>
 
     <!-- iFrame overlay with multiply effect -->
-    <iframe class="iframe-overlay" src="https://talmetal.me/talme"></iframe>
+    <iframe class="iframe-overlay" src="https://talmetal.me/tal"></iframe>
 
     <script>
         // Random brightness effect
