--- a/talmetal.html
+++ b/talmetal.html
@@ -1,173 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3dead link</title>
-    <style>
-        /* Integrated CSS from style.css */
-        html, body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100%; /* Ensure html and body take full height */
-        }
-
-        body {
-            transition: filter 2s ease-in-out;
-        }
-
-        iframe {
-            width: 100dvw;
-            height: 110dvh;
-            border: 0;
-        }
-
-        @media(max-width: 600px) {
-            iframe {
-                /* Adjust iframe height on mobile if needed */
-            }
-        }
-
-        /* Button link styles */
-        .button-link {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #fff;
-            color: black;
-            padding: 10px 15px;
-            text-decoration: none;
-            border-radius: 5px;
-            z-index: 100;
-            border: 0.5px solid black;
-        }
-
-        .button-link:hover {
-            background-color: greenyellow;
-        }
-
-        /* Blinking values container */
-        #dataContainer {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%; /* Use percentage height */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around; /* Dynamic spacing between values */
-            align-items: center;
-            z-index: 999; /* On top of everything */
-            pointer-events: none; /* Allow interaction with iframe */
-        }
-
-        .value {
-            color: red;
-            font-weight: bold;
-            font-size: 36px;
-        }
-
-        /* Blinking animation without transition */
-        @keyframes blink {
-            0% { opacity: 1; }
-            50% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        .blinking {
-            animation: blink 2s steps(1) infinite; /* Immediate blink without transition */
-        }
-
-        /* Added styles for the iframe overlay with multiply effect */
-        .iframe-overlay {
-            position: fixed; /* Cover the viewport */
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            z-index: 500; /* Ensure it's on top of the main content but below the dataContainer */
-            mix-blend-mode: multiply; /* Apply the multiply blend effect */
-            pointer-events: none; /* Allow interactions with elements underneath */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>dead link</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      transition: filter 2s ease-in-out;
+    }
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    /* Existing iframe styling */
+    .background-iframe {
+      z-index: 1; /* Place below the overlay iframe */
+    }
+    /* New iframe overlay with multiply effect */
+    .iframe-overlay {
+      mix-blend-mode: multiply; /* Apply multiply effect */
+      z-index: 2; /* Place above the existing iframe */
+    }
+    .button-link {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: #fff;
+      color: black;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 5px;
+      z-index: 3; /* Ensure it's above both iframes */
+      border: 0.5px solid black;
+    }
+    .button-link:hover {
+      background-color: greenyellow;
+    }
+  </style>
 </head>
 <body>
-    <!-- API Data Display (blinking values) -->
-    <div id="dataContainer"></div>
+  <a href="https://talmetal.me/talme" class="button-link">dead link</a>
+  
+  <!-- Existing iframe -->
+  <iframe class="background-iframe" src="https://economybooks.info/mosaic.html"></iframe>
+  
+  <!-- New iframe overlay with multiply effect -->
+  <iframe class="iframe-overlay" src="https://talmetal.me/talme"></iframe>
+  
+  <script>
+    let inverted = false;
+    
+    function setRandomInterval() {
+        const randomInterval = Math.floor(Math.random() * (10000 - 1000 + 1)) + 1000; // Random between 1s and 10s
+        inverted = !inverted;
+        document.body.style.filter = inverted ? 'brightness(100%)' : 'brightness(200%)';
+        
+        setTimeout(setRandomInterval, randomInterval); // Set the next interval
+    }
 
-    <!-- Original button link and iframe content -->
-    <a href="https://talmetal.me" class="button-link">dead link</a>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEftNhPefZb7l7Di6IFZUWDrFV9PtBXbRxXakux0hlrBw0cjVeA0yq4Jku13_WGaijv9BfWq41aqMv/pubhtml"></iframe>
-
-    <!-- iFrame overlay with multiply effect -->
-    <iframe class="iframe-overlay" src="https://talmetal.me/tal"></iframe>
-
-    <script>
-        // Random brightness effect
-        let inverted = false;
-
-        function setRandomInterval() {
-            const randomInterval = Math.floor(Math.random() * (10000 - 1000 + 1)) + 1000; // Random between 1s and 10s
-            inverted = !inverted;
-            document.body.style.filter = inverted ? 'brightness(100%)' : 'brightness(200%)';
-
-            setTimeout(setRandomInterval, randomInterval); // Set the next interval with a random value
-        }
-
-        setRandomInterval(); // Start the random interval process
-
-        // API URL
-        const apiUrl = 'https://script.google.com/macros/s/AKfycbxerbcKauvIo5W6PGUlfn0QJw7GdCSmvtZmScv4Q1efjd972X_h6KUEBwesyBLSTOC/exec';
-
-        // Function to fetch API data
-        async function fetchApiData() {
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-                displayData(data);
-            } catch (error) {
-                console.error('Error fetching API data:', error);
-            }
-        }
-
-        // Function to format the number
-        function formatNumber(value) {
-            if (Math.floor(value) === value) {
-                return value; // No decimal places needed if it's a whole number
-            } else {
-                return value.toFixed(2).replace(/\.?0+$/, ''); // Show up to 2 decimals if needed, but strip trailing zeros
-            }
-        }
-
-        // Function to display data on the page
-        function displayData(data) {
-            const container = document.getElementById('dataContainer');
-            container.innerHTML = ''; // Clear previous data
-
-            const keysToDisplay = [
-                "ColumnE-Row2", "ColumnE-Row3", "ColumnE-Row4",
-                "ColumnE-Row5", "ColumnE-Row6", "ColumnE-Row7",
-                "ColumnE-Row8", "ColumnE-Row9", "ColumnE-Row10", "ColumnE-Row11"
-            ];
-
-            keysToDisplay.forEach(key => {
-                const valueObject = data.find(obj => obj.hasOwnProperty(key));
-                if (valueObject) {
-                    let value = valueObject[key];
-                    value = formatNumber(parseFloat(value)); // Format the number
-                    const valueDiv = document.createElement('div');
-                    valueDiv.className = 'value blinking'; // Add blinking effect
-                    valueDiv.textContent = `${value}`; // Display value only
-                    container.appendChild(valueDiv);
-                }
-            });
-        }
-
-        // Fetch data initially and then every 30 seconds
-        fetchApiData();
-        setInterval(fetchApiData, 30000); // Refresh every 30 seconds
-    </script>
+    setRandomInterval(); // Start the process
+  </script>
 </body>
 </html>
