--- a/tal.html
+++ b/tal.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-  <a href="https://talmetal.me/talme" class="button-link">dead link</a>
+  <a href="https://talmetal.me/" class="button-link">dead link</a>
   
   <!-- Existing iframe -->
   <iframe class="background-iframe" src="https://economybooks.info/mosaic_image_reorder.html"></iframe>
