--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <a href="https://talmetal.me/tal" class="button-link">dead link</a>
-  <iframe src="https://talmetal.me/index2.html"></iframe>
+  <iframe src="https://economybooks.info/test8.html"></iframe>
 </body>
       <script>
         let inverted = false;
