--- a/talme.html
+++ b/talme.html
@@ -86,7 +86,7 @@
     <div id="dataContainer"></div>
 
     <!-- Original button link and iframe content -->
-    <a href="https://talmetal.me" class="button-link">dead link</a>
+    <a href="https://economybooks.info/test8_from_inside.html" class="button-link">dead link</a>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTEftNhPefZb7l7Di6IFZUWDrFV9PtBXbRxXakux0hlrBw0cjVeA0yq4Jku13_WGaijv9BfWq41aqMv/pubhtml"></iframe>
 
     <script>
